<resources>
    <string name="app_name">Application</string>
    <string name="ressources">Hello World</string>
    <string name="version_java">Version Java</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="version_xml">Version XML</string>
    <string name="secteur_activit">Secteur Activité</string>
    <string name="age">Age</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="valider">Valider</string>
</resources>